Banner image added

--- a/index.html
+++ b/index.html
@@ -22,12 +22,16 @@
       referrerpolicy="no-referrer"
     />
     <!--  -->
+
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <div class="navbar bg-base-100 shadow-sm px-10">
         <div class="navbar-start">
-          <a class="btn btn-ghost text-2xl text-blue-600 font-bold">SwiftCart</a>
+          <a class="btn btn-ghost text-2xl text-blue-600 font-bold"
+            >SwiftCart</a
+          >
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1">
@@ -38,7 +42,9 @@
           </ul>
         </div>
         <div class="navbar-end">
-          <i class="fa-solid fa-cart-arrow-down pr-10 pt-2 text-2xl btn btn-ghost"></i>
+          <i
+            class="fa-solid fa-cart-arrow-down pr-10 pt-2 text-2xl btn btn-ghost"
+          ></i>
         </div>
         <div class="dropdown">
           <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -69,5 +75,18 @@
         </div>
       </div>
     </header>
+
+    <section class="banner justify-center">
+      <img src="Assets/banner-image.png" alt="" class="banner-image" />
+      <div class="banner-layer"></div>
+      <div class="banner-text">
+        <h3 class="text-6xl font-bold">Best Collection For You</h3>
+        <p class="my-2 text-xl">
+          Discover the latest trends in fashion, electronics, and more. Shop
+          with confidence and style at SwiftCart
+        </p>
+        <button class="btn btn-primary mt-5">Shop Now</button>
+      </div>
+    </section>
   </body>
 </html>
