--- a/index.html
+++ b/index.html
@@ -88,5 +88,87 @@
         <button class="btn btn-primary mt-5">Shop Now</button>
       </div>
     </section>
+
+    <!-- Why choose us section -->
+    <section class="bg-slate-100 h-[550px]">
+      <div class="text-center pt-32 pb-24">
+        <h2 class="text-5xl font-bold mb-3">Why Choose Us</h2>
+        <p class="text-xl">
+          We provide the best shopping experience with top-notch services.
+        </p>
+      </div>
+      <div class="Choose-us px-24 grid grid-cols-4 gap-10">
+        <div class="bg-white p-5 rounded-md">
+          <i
+            class="fa-solid fa-bus text-blue-500 bg-blue-100 rounded-sm p-1"
+          ></i>
+          <h6 class="font-semibold mt-2">Fast Delivery</h6>
+          <p class="text-sm">
+            Get your orders delivered to your doorstep quickly and efficiently.
+          </p>
+        </div>
+        <div class="bg-white p-5 rounded-md">
+          <i
+            class="fa-solid fa-headphones text-blue-500 bg-blue-100 rounded-sm p-1"
+          ></i>
+          <h6 class="font-semibold mt-2">24/7 Support</h6>
+          <p class="text-sm">
+            Our support team is available around the clock to assist you.
+          </p>
+        </div>
+        <div class="bg-white p-5 rounded-md">
+          <i
+            class="fa-solid fa-shield text-blue-500 bg-blue-100 rounded-sm p-1"
+          ></i>
+          <h6 class="font-semibold mt-2">Secure Payment</h6>
+          <p class="text-sm">
+            Experience safe and secure transactions with our encrypted payment
+            systems.
+          </p>
+        </div>
+        <div class="bg-white p-5 rounded-md">
+          <i
+            class="fa-solid fa-rotate text-blue-500 bg-blue-100 rounded-sm p-1"
+          ></i>
+          <h6 class="font-semibold mt-2">Easy Returns</h6>
+          <p class="text-sm">
+            Not satisfied? Return your products easily within 30 days.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Trending now section -->
+    <div class="grid grid-cols-3 gap-10 p-24">
+      <div class="card bg-base-100 w-96 shadow-sm">
+        <figure>
+          <img
+            src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+            alt="Shoes"
+          />
+        </figure>
+        <div class="card-body">
+          <div class="flex justify-between">
+            <div>
+              <p class="text-blue-500 bg-blue-50 rounded-full px-2 text-xs">
+                Men's clothing
+              </p>
+            </div>
+            <div class="flex">
+              <i class="fa-solid fa-star text-yellow-400 pt-1"></i>
+              <p class="mx-2"><span class="font-semibold">3.9</span> (120)</p>
+            </div>
+          </div>
+          <div class="ml-2">
+            <p class="font-semibold">Product name</p>
+            <p class="font-bold">$109.95</p>
+          </div>
+          <div class="card-actions justify-between">
+            <button class="btn btn-outline w-[48%]">Details</button>
+            <button class="btn btn-primary w-[48%]">Add</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
