--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
     </section>
 
     <!-- Trending now section -->
-    <div class="grid grid-cols-3 gap-10 p-24">
+    <h1 class="text-5xl font-bold px-24 mt-28 mb-6">Trending Now</h1>
+    <div class="grid grid-cols-3 gap-10 px-24">
       <div class="card bg-base-100 w-96 shadow-sm">
         <figure>
           <img
@@ -170,5 +171,41 @@
         </div>
       </div>
     </div>
+
+    <!-- Footer -->
+    <footer class="bg-slate-800 text-white py-24 px-32 mt-32">
+      <div class="grid grid-cols-4 lg:gap-10">
+        <div>
+          <h6 class="font-semibold mb-8 text-blue-600 text-xl">SwiftCart</h6>
+          <p class="text-sm">
+            Your one-stop shop for all your fashion and lifestyle needs. Quality
+            products, fast delivery, and excellent support.
+          </p>
+        </div>
+        <div class="lg:ml-20">
+          <h6 class="font-semibold mb-8">QUICK LINKS</h6>
+          <p class="text-sm mb-1">Home</p>
+          <p class="text-sm mb-1">Products</p>
+          <p class="text-sm mb-1">About</p>
+          <p class="text-sm mb-1">Contact</p>
+        </div>
+        <div class="lg:ml-16">
+          <h6 class="font-semibold mb-8">SUPPORT</h6>
+          <p class="text-sm mb-1">FQA</p>
+          <p class="text-sm mb-1">Shipping</p>
+          <p class="text-sm mb-1">Returns</p>
+          <p class="text-sm mb-1">Privacy Policy</p>
+        </div>
+        <div>
+          <h6 class="font-semibold mb-8">Subscribe to our newsletter</h6>
+          <p class="text-sm mb-4">The latest news, articles, and resources, sent
+to your inbox weekly.</p>
+ <div class="card-actions justify-between">
+            <button class="btn btn-outline w-[58%]">Enter your email</button>
+            <button class="btn btn-primary w-[38%]">Subscribe</button>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
