--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1">
-            <li><a>Home</a></li>
-            <li><a>Products</a></li>
-            <li><a>About</a></li>
-            <li><a>Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="navbar-end">
@@ -67,37 +67,37 @@
             tabindex="-1"
             class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow"
           >
-            <li><a>Home</a></li>
-            <li><a>Products</a></li>
-            <li><a>About</a></li>
-            <li><a>Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
     </header>
 
     <section class="banner justify-center">
-      <img src="Assets/banner-image.png" alt="" class="banner-image" />
+      <img src="Assets/banner-image.png" alt="" class="banner-image md:h-[620px] h-[450px]" />
       <div class="banner-layer"></div>
       <div class="banner-text">
-        <h3 class="text-6xl font-bold">Best Collection For You</h3>
-        <p class="my-2 text-xl">
+        <h3 class="lg:text-6xl md:text-5xl text-3xl font-bold">Best Collection For You</h3>
+        <p class="md:my-3 lg:text-2xl md:text-xl">
           Discover the latest trends in fashion, electronics, and more. Shop
           with confidence and style at SwiftCart
         </p>
-        <button class="btn btn-primary mt-5">Shop Now</button>
+        <button class="btn btn-primary mt-5 lg:text-xl">Shop Now</button>
       </div>
     </section>
 
     <!-- Why choose us section -->
-    <section class="bg-slate-100 h-[550px]">
-      <div class="text-center pt-32 pb-24">
-        <h2 class="text-5xl font-bold mb-3">Why Choose Us</h2>
-        <p class="text-xl">
+    <section class="bg-slate-100 lg:h-[550px] md:h-[800px] h-[800px]">
+      <div class="text-center lg:pt-32 md:pt-24 pt-16 lg:pb-24 md:pb-18">
+        <h2 class="lg:text-5xl md:text-4xl text-3xl font-bold mb-3">Why Choose Us</h2>
+        <p class="lg:text-xl px-10 md:pb-0 pb-10">
           We provide the best shopping experience with top-notch services.
         </p>
       </div>
-      <div class="Choose-us px-24 grid grid-cols-4 gap-10">
+      <div class="Choose-us px-24 lg:grid grid-cols-4 gap-10">
         <div class="bg-white p-5 rounded-md">
           <i
             class="fa-solid fa-bus text-blue-500 bg-blue-100 rounded-sm p-1"
@@ -139,73 +139,62 @@
     </section>
 
     <!-- Trending now section -->
-    <h1 class="text-5xl font-bold px-24 mt-28 mb-6">Trending Now</h1>
-    <div class="grid grid-cols-3 gap-10 px-24">
-      <div class="card bg-base-100 w-96 shadow-sm">
-        <figure>
-          <img
-            src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-            alt="Shoes"
-          />
-        </figure>
-        <div class="card-body">
-          <div class="flex justify-between">
-            <div>
-              <p class="text-blue-500 bg-blue-50 rounded-full px-2 text-xs">
-                Men's clothing
-              </p>
-            </div>
-            <div class="flex">
-              <i class="fa-solid fa-star text-yellow-400 pt-1"></i>
-              <p class="mx-2"><span class="font-semibold">3.9</span> (120)</p>
-            </div>
-          </div>
-          <div class="ml-2">
-            <p class="font-semibold">Product name</p>
-            <p class="font-bold">$109.95</p>
-          </div>
-          <div class="card-actions justify-between">
-            <button class="btn btn-outline w-[48%]">Details</button>
-            <button class="btn btn-primary w-[48%]">Add</button>
-          </div>
-        </div>
-      </div>
-    </div>
+    <section>
+      <h1 class="lg:text-5xl md:text-4xl text-2xl font-bold md:px-32 px-16  lg:mt-28 md:mt-16 mt-14 mb-8">Trending Now</h1>
+
+      <div id="product-container" class="grid lg:grid-cols-3 md:grid-cols-2 gap-12 md:px-32 px-16"></div>
+    </section>
+
+    <script src="script/index.js"></script>
 
     <!-- Footer -->
-    <footer class="bg-slate-800 text-white py-24 px-32 mt-32">
-      <div class="grid grid-cols-4 lg:gap-10">
+    <footer class="bg-slate-800 text-white lg:pt-24 md:pt-16 pt-10 lg:px-32 md:px-16 px-10 mt-32">
+      <div class="md:grid md:grid-cols-4 lg:gap-10">
         <div>
-          <h6 class="font-semibold mb-8 text-blue-600 text-xl">SwiftCart</h6>
+          <h6 class="font-semibold md:mb-8 md:mt-0 mt-5 text-blue-600 text-xl">SwiftCart</h6>
           <p class="text-sm">
             Your one-stop shop for all your fashion and lifestyle needs. Quality
             products, fast delivery, and excellent support.
           </p>
         </div>
-        <div class="lg:ml-20">
-          <h6 class="font-semibold mb-8">QUICK LINKS</h6>
+        <div class="lg:ml-20 md:ml-16">
+          <h6 class="font-semibold md:mb-8 md:mt-0 mt-5">QUICK LINKS</h6>
           <p class="text-sm mb-1">Home</p>
           <p class="text-sm mb-1">Products</p>
           <p class="text-sm mb-1">About</p>
           <p class="text-sm mb-1">Contact</p>
         </div>
-        <div class="lg:ml-16">
-          <h6 class="font-semibold mb-8">SUPPORT</h6>
+        <div class="lg:ml-16 md:ml-10">
+          <h6 class="font-semibold md:mb-8 md:mt-0 mt-5">SUPPORT</h6>
           <p class="text-sm mb-1">FQA</p>
           <p class="text-sm mb-1">Shipping</p>
           <p class="text-sm mb-1">Returns</p>
           <p class="text-sm mb-1">Privacy Policy</p>
         </div>
         <div>
-          <h6 class="font-semibold mb-8">Subscribe to our newsletter</h6>
-          <p class="text-sm mb-4">The latest news, articles, and resources, sent
-to your inbox weekly.</p>
- <div class="card-actions justify-between">
-            <button class="btn btn-outline w-[58%]">Enter your email</button>
-            <button class="btn btn-primary w-[38%]">Subscribe</button>
+          <h6 class="font-semibold md:mb-8 md:mt-0 mt-5">Subscribe to our newsletter</h6>
+          <p class="text-sm mb-4">
+            The latest news, articles, and resources, sent to your inbox weekly.
+          </p>
+          <div class="card-actions justify-between">
+            <button class="btn btn-outline lg:w-[58%]">Enter your email</button>
+            <button class="btn btn-primary lg:w-[38%]">Subscribe</button>
           </div>
         </div>
       </div>
+      <hr class="text-slate-600 lg:mt-16 md:mt-8 mt-4 md:mb-8 mb-0" />
+      <div class="md:flex md:justify-between py-5">
+        <p class="md:mb-0 mb-2">© 2025 SwiftCart, Inc. All rights reserved.</p>
+        <div class="flex text-slate-500">
+          <i class="fa-brands fa-facebook-f ml-2"></i>
+          <i class="fa-brands fa-twitter ml-2"></i>
+          <i class="fa-brands fa-instagram ml-2"></i>
+          <i class="fa-brands fa-linkedin ml-2"></i>
+          <i class="fa-regular fa-envelope ml-2"></i>
+        </div>
+      </div>
     </footer>
+
+    
   </body>
 </html>
