added footer to the product page

--- a/index.html
+++ b/index.html
@@ -145,6 +145,19 @@
       <div id="product-container" class="grid lg:grid-cols-3 md:grid-cols-2 gap-12 md:px-32 px-16"></div>
     </section>
 
+    <dialog id="product_modal" class="modal">
+      <div class="modal-box">
+        <div id="details-container">
+         
+        </div>
+        <div class="modal-action">
+          <form method="dialog">
+            <!-- if there is a button in form, it will close the modal -->
+            <button class="btn">Close</button>
+          </form>
+        </div>
+      </div>
+    </dialog>
     <script src="script/index.js"></script>
 
     <!-- Footer -->
