--- a/products.html
+++ b/products.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-     <header>
+    <header>
       <div class="navbar bg-base-100 shadow-sm px-10">
         <div class="navbar-start">
           <a class="btn btn-ghost text-2xl text-blue-600 font-bold"
@@ -82,16 +82,81 @@
       >
         Our Products
       </h1>
-       <div
+      <div
         id="category-container"
-        class="px-32 py-12 flex justify-center gap-5"
+        class="md:px-32 px-10 py-12 md:flex justify-center md:gap-5"
       ></div>
       <div
         id="product-container"
-        class="grid lg:grid-cols-3 md:grid-cols-2 gap-12 px-32"
+        class="grid lg:grid-cols-3 md:grid-cols-2 gap-12 md:px-32 px-16"
       ></div>
     </section>
 
+    <!-- Open the modal using ID.showModal() method -->
+    <!-- <button class="btn" onclick="my_modal_1.showModal()">open modal</button> -->
+    <dialog id="product_modal" class="modal">
+      <div class="modal-box">
+        <div id="details-container">
+         
+        </div>
+        <div class="modal-action">
+          <form method="dialog">
+            <!-- if there is a button in form, it will close the modal -->
+            <button class="btn">Close</button>
+          </form>
+        </div>
+      </div>
+    </dialog>
+
+     <!-- Footer -->
+    <footer class="bg-slate-800 text-white lg:pt-24 md:pt-16 pt-10 lg:px-32 md:px-16 px-10 mt-32">
+      <div class="md:grid md:grid-cols-4 lg:gap-10">
+        <div>
+          <h6 class="font-semibold md:mb-8 md:mt-0 mt-5 text-blue-600 text-xl">SwiftCart</h6>
+          <p class="text-sm">
+            Your one-stop shop for all your fashion and lifestyle needs. Quality
+            products, fast delivery, and excellent support.
+          </p>
+        </div>
+        <div class="lg:ml-20 md:ml-16">
+          <h6 class="font-semibold md:mb-8 md:mt-0 mt-5">QUICK LINKS</h6>
+          <p class="text-sm mb-1">Home</p>
+          <p class="text-sm mb-1">Products</p>
+          <p class="text-sm mb-1">About</p>
+          <p class="text-sm mb-1">Contact</p>
+        </div>
+        <div class="lg:ml-16 md:ml-10">
+          <h6 class="font-semibold md:mb-8 md:mt-0 mt-5">SUPPORT</h6>
+          <p class="text-sm mb-1">FQA</p>
+          <p class="text-sm mb-1">Shipping</p>
+          <p class="text-sm mb-1">Returns</p>
+          <p class="text-sm mb-1">Privacy Policy</p>
+        </div>
+        <div>
+          <h6 class="font-semibold md:mb-8 md:mt-0 mt-5">Subscribe to our newsletter</h6>
+          <p class="text-sm mb-4">
+            The latest news, articles, and resources, sent to your inbox weekly.
+          </p>
+          <div class="card-actions justify-between">
+            <button class="btn btn-outline lg:w-[58%]">Enter your email</button>
+            <button class="btn btn-primary lg:w-[38%]">Subscribe</button>
+          </div>
+        </div>
+      </div>
+      <hr class="text-slate-600 lg:mt-16 md:mt-8 mt-4 md:mb-8 mb-0" />
+      <div class="md:flex md:justify-between py-5">
+        <p class="md:mb-0 mb-2">© 2025 SwiftCart, Inc. All rights reserved.</p>
+        <div class="flex text-slate-500">
+          <i class="fa-brands fa-facebook-f ml-2"></i>
+          <i class="fa-brands fa-twitter ml-2"></i>
+          <i class="fa-brands fa-instagram ml-2"></i>
+          <i class="fa-brands fa-linkedin ml-2"></i>
+          <i class="fa-regular fa-envelope ml-2"></i>
+        </div>
+      </div>
+    </footer>
+
+    
     <script src="script/products.js"></script>
   </body>
 </html>
